spectec/test/elab/neg/dataflow-bind-in-non-invertible.spectec
;; A binding identifier appears inside a non-invertible operator
;; (unary minus), where it cannot be solved for during inversion.

syntax foo = int

var x : foo

relation R: foo |- foo
  hint(input %0)

rule R/neg:
  0 |- 0
  -- if -x = 5
